[gd_scene load_steps=7 format=3 uid="uid://covxr8r8gd3hm"]

[ext_resource type="PackedScene" path="res://Scenes/Controls/TabTitle.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://db8fi77xxhkbp" path="res://Scenes/TransactionLog.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Scenes/Controls/DataPanel.tscn" id="3"]
[ext_resource type="Script" path="res://Scripts/ActiveTransactionsTab.gd" id="4"]

[sub_resource type="Animation" id="1"]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_we6xx"]
_data = {
"FadeIn": SubResource("1")
}

[node name="ActiveTransactionsTab" type="Control" groups=["Tab"]]
clip_contents = true
custom_minimum_size = Vector2(920, 600)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -104.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 1
script = ExtResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(920, 600)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -31.9999
theme_override_constants/separation = 0

[node name="TabTitle" parent="VBoxContainer" instance=ExtResource("1")]
custom_minimum_size = Vector2(920, 72)
layout_mode = 2

[node name="MarginContainer" parent="VBoxContainer/TabTitle" index="0"]
layout_mode = 0
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Title" parent="VBoxContainer/TabTitle/MarginContainer" index="0"]
layout_mode = 2
text = "Active Transactions"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(920, 96)
layout_mode = 2
theme_override_constants/separation = 16

[node name="TotalCoins" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3")]
layout_mode = 2

[node name="MarginContainer" parent="VBoxContainer/HBoxContainer/TotalCoins" index="0"]
layout_mode = 0
anchor_right = 0.0
anchor_bottom = 0.0

[node name="ColorRect" parent="VBoxContainer/HBoxContainer/TotalCoins/MarginContainer" index="0"]
layout_mode = 2

[node name="CenterContainer" parent="VBoxContainer/HBoxContainer/TotalCoins/MarginContainer" index="1"]
layout_mode = 2

[node name="VBoxContainer" parent="VBoxContainer/HBoxContainer/TotalCoins/MarginContainer/CenterContainer" index="0"]
layout_mode = 2

[node name="Title" parent="VBoxContainer/HBoxContainer/TotalCoins/MarginContainer/CenterContainer/VBoxContainer" index="0"]
layout_mode = 2
text = "Total Coins"

[node name="HBoxContainer" parent="VBoxContainer/HBoxContainer/TotalCoins/MarginContainer/CenterContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="DataLabel" parent="VBoxContainer/HBoxContainer/TotalCoins/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2

[node name="PercentLabel" parent="VBoxContainer/HBoxContainer/TotalCoins/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2

[node name="TotalAmountPaid" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3")]
layout_mode = 2

[node name="MarginContainer" parent="VBoxContainer/HBoxContainer/TotalAmountPaid" index="0"]
layout_mode = 0
anchor_right = 0.0
anchor_bottom = 0.0

[node name="ColorRect" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer" index="0"]
layout_mode = 2

[node name="CenterContainer" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer" index="1"]
layout_mode = 2

[node name="VBoxContainer" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer/CenterContainer" index="0"]
layout_mode = 2

[node name="Title" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer/CenterContainer/VBoxContainer" index="0"]
layout_mode = 2
text = "Total Paid"

[node name="HBoxContainer" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer/CenterContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="DataLabel" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2

[node name="PercentLabel" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2

[node name="CostAverage" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3")]
layout_mode = 2

[node name="MarginContainer" parent="VBoxContainer/HBoxContainer/CostAverage" index="0"]
layout_mode = 0
anchor_right = 0.0
anchor_bottom = 0.0

[node name="ColorRect" parent="VBoxContainer/HBoxContainer/CostAverage/MarginContainer" index="0"]
layout_mode = 2

[node name="CenterContainer" parent="VBoxContainer/HBoxContainer/CostAverage/MarginContainer" index="1"]
layout_mode = 2

[node name="VBoxContainer" parent="VBoxContainer/HBoxContainer/CostAverage/MarginContainer/CenterContainer" index="0"]
layout_mode = 2

[node name="Title" parent="VBoxContainer/HBoxContainer/CostAverage/MarginContainer/CenterContainer/VBoxContainer" index="0"]
layout_mode = 2
text = "Cost Average"

[node name="HBoxContainer" parent="VBoxContainer/HBoxContainer/CostAverage/MarginContainer/CenterContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="DataLabel" parent="VBoxContainer/HBoxContainer/CostAverage/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2

[node name="PercentLabel" parent="VBoxContainer/HBoxContainer/CostAverage/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2

[node name="DataPanel4" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3")]
visible = false
layout_mode = 2

[node name="TransactionLog" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_we6xx")
}

[connection signal="AddTransactionClick" from="VBoxContainer/TransactionLog" to="." method="_on_TransactionLog_AddTransactionClick"]
[connection signal="CalcualteTotalPrice" from="VBoxContainer/TransactionLog" to="." method="_on_TransactionLog_CalcualteTotalPrice"]
[connection signal="CalculateCostAverage" from="VBoxContainer/TransactionLog" to="." method="_on_TransactionLog_CalculateCostAverage"]
[connection signal="CalculatedNumberOfCoins" from="VBoxContainer/TransactionLog" to="." method="_on_TransactionLog_CalculatedNumberOfCoins"]
[connection signal="EditTransactionClick" from="VBoxContainer/TransactionLog" to="." method="_on_TransactionLog_EditTransactionClick"]
[connection signal="SellTransactoinClick" from="VBoxContainer/TransactionLog" to="." method="_on_TransactionLog_SellTransactoinClick"]
[connection signal="SplitTransactionClick" from="VBoxContainer/TransactionLog" to="." method="_on_TransactionLog_SplitTransactionClick"]

[editable path="VBoxContainer/TabTitle"]
[editable path="VBoxContainer/HBoxContainer/TotalCoins"]
[editable path="VBoxContainer/HBoxContainer/TotalAmountPaid"]
[editable path="VBoxContainer/HBoxContainer/CostAverage"]
